--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anes Mehai | Portfolio</title>
-    <link rel="stylesheet" href="./portfolio/assets/css/style.css" />
+    <link rel="stylesheet" href="/portfolio/assets/css/style.css" />
     <link
     rel="stylesheet"
-    href="./assets/fontawesome/css/all.min.css"
+    href="portfolio/assets/fontawesome/css/all.min.css"
     />
     <!--Could download css fontawesome style to lessen dependencies/faster loading-->
   </head>
