--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <i class="fab fa-github"></i>
             </a>
             <a
-              href="assets/files/Anes-Mehai-SWE-2025-Resume.pdf"
+              href="portfolio/assets/files/Anes-Mehai-SWE-2025-Resume.pdf"
               download="Anes-Mehai-SWE-2025-Resume.pdf"
               class="btn"
               style="font-size: 1rem; padding: 0.5rem 1rem; margin-left: 0.5rem"
@@ -220,7 +220,7 @@
           </div>
 
           <a
-            href="assets/files/Anes-Mehai-SWE-2025-Resume.pdf"
+            href="portfolio/assets/files/Anes-Mehai-SWE-2025-Resume.pdf"
             download="Anes-Mehai-SWE-2025-Resume.pdf"
             class="btn btn-download"
           >
@@ -471,6 +471,6 @@
       <p>© <span id="current-year"></span> Anes Mehai. All rights reserved.</p>
     </footer>
 
-    <script src="assets/js/script.js"></script>
+    <script src="portfolio/assets/js/script.js"></script>
   </body>
 </html>
