--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           "
         >
           <h1 style="margin: 0; font-size: 2.5rem; font-weight: bold">
-            Anes Mehaisdsdsdsdsd
+            Anes Mehai
           </h1>
           <div style="display: flex; gap: 1rem; flex-wrap: wrap">
             <a
