Update to Experience

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         <h2>Experience</h2>
         <div class="section-content">
           <div class="experience-item">
-            <h3>Software Developer II @ Alesig</h3>
+            <h3>Software Engineer II @ Department of Labor 
+		/ Consultant via Alesig Consulting</h3>
             <p class="experience-dates">05/2022 - 02/2025</p>
             <ul>
               <li>
