Update README and profile pic.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <br />
       <div class="about-header">
         <img
-          src="https://devness-portfolio.s3.us-east-1.amazonaws.com/images/anes-mehai-profilepic.jpg"
+          src="./portfolio/assets/img/ppic.jpg"
           alt="Anes Mehai headshot"
           class="headshot"
           
