--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anes Mehai | Portfolio</title>
+    <link
+      rel="icon"
+      href="./AM-logo.ico"
+      type="image/x-icon"
+    />
+    <!-- unsure why favicon isn't showing up in the browser tab -->
     <link rel="stylesheet" href="portfolio/assets/css/style.css" />
     <link
     rel="stylesheet"
     href="portfolio/assets/fontawesome/css/all.min.css"
     />
-    <!--Could download css fontawesome style to lessen dependencies/faster loading-->
+    <!--Downloaded css fontawesome style to lessen dependencies/faster loading-->
   </head>
   <body>
     <header class="site-header">
@@ -52,9 +58,7 @@
             gap: 1rem;
           "
         >
-          <h1 style="margin: 0; font-size: 2.5rem; font-weight: bold">
-            Anes Mehai
-          </h1>
+          <h1>Anes Mehai</h1>
           <div style="display: flex; gap: 1rem; flex-wrap: wrap">
             <a
               href="mailto:nessworkdc@gmail.com"
@@ -91,8 +95,10 @@
             </a>
           </div>
           <span style="font-size: 1.1rem; color: #666"
-            >Full-Stack Software Engineer</span
+            >Full-Stack Software Engineer | Building Modern and Scalable Web & Mobile Solutions | Java ·  React.js ·  AWS </span
           >
+          <p style="font-size: 1.1rem; color: #666">
+            📍 Based in New Orleans ⚜️ | Open to Remote Opportunities
         </div>
       </div>
       <!-- About Section -->
@@ -403,8 +409,9 @@
           <div class="education-item">
             <h3>University of Maryland Global Campus</h3>
             <p class="location">Adelphi, Maryland</p>
-            <p class="education-dates">Bachelor of Science in Computer Science</p>
-            <p>Graduated: December 2021</p>
+            <br/>
+            <p class="education-dates"><b>Bachelor of Science in Computer Science</b></p>
+            <p>December 2016 - December 2021</p>
           </div>
         </div>
       <!-- Photography Section -->
@@ -437,7 +444,7 @@
       <section id="contact" class="content-section">
         <h2>Contact</h2>
         <div class="section-content contact-details">
-          <h1>Let's Connect!!</h1>
+          <h3>Let's Connect!!</h3>
           <ul>
             <li>
               <i class="fas fa-envelope"></i> Email:
