--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             >Full-Stack Software Engineer | Building Modern and Scalable Web & Mobile Solutions | Java ·  React.js ·  AWS </span
           >
           <p style="font-size: 1.1rem; color: #666">
-            📍 Based in New Orleans ⚜️ | Open to Remote Opportunities
+            📍 Based in New Orleans ⚜️
         </div>
       </div>
       <!-- About Section -->
