--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Anes Mehai | Portfolio</title>
     <link
       rel="icon"
-      href="./AM-logo.ico"
+      href="./devness-logo.ico"
       type="image/x-icon"
     />
     <!-- unsure why favicon isn't showing up in the browser tab -->
@@ -59,7 +59,7 @@
           "
         >
           <h1>Anes Mehai</h1>
-          <div style="display: flex; gap: 1rem; flex-wrap: wrap">
+          <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
             <a
               href="mailto:nessworkdc@gmail.com"
               title="Email"
@@ -94,7 +94,7 @@
               <i class="fas fa-download"></i> Download CV
             </a>
           </div>
-          <span style="font-size: 1.1rem; color: #666"
+          <span style="font-size: 1.1rem; color: #666; text-align: center;"
             >Full-Stack Software Engineer | Building Modern and Scalable Web & Mobile Solutions | Java ·  React.js ·  AWS </span
           >
           <p style="font-size: 1.1rem; color: #666">
