--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Anes Mehai | Portfolio</title>
     <link
       rel="icon"
-      href="./devness-favicon.ico"
+      href="./portfolio/assets/img/devness-favicon.ico"
       type="image/x-icon"
     />
     <!-- unsure why favicon isn't showing up in the browser tab -->
